--- a/requirements.txt
+++ b/requirements.txt
@@ -73,6 +73,7 @@ testpath==0.5.0
 tornado==6.1
 traitlets==5.1.1
 urllib3==1.26.7
+uuid==1.30
 wcwidth==0.2.5
 webencodings==0.5.1
 websocket-client==1.2.1
