--- a/requirements.txt
+++ b/requirements.txt
@@ -2,15 +2,22 @@ anyio==3.4.0
 appnope==0.1.2
 argon2-cffi==21.1.0
 attrs==21.2.0
+Automat==20.2.0
 Babel==2.9.1
 backcall==0.2.0
+beautifulsoup4==4.10.0
 bleach==4.1.0
+boto3==1.20.20
+botocore==1.23.20
 certifi==2021.10.8
 cffi==1.15.0
 charset-normalizer==2.0.8
 click==8.0.3
 click-plugins==1.1.1
 cligj==0.7.2
+constantly==15.1.0
+cryptography==36.0.0
+cssselect==1.1.0
 debugpy==1.5.1
 decorator==5.1.0
 defusedxml==0.7.1
@@ -19,13 +26,22 @@ Fiona==1.8.20
 geographiclib==1.52
 geopandas==0.10.2
 geopy==2.2.0
+greenlet==1.1.2
+h2==3.2.0
+hpack==3.0.0
+hyperframe==5.2.0
+hyperlink==21.0.0
 idna==3.3
 importlib-resources==5.4.0
+incremental==21.3.0
 ipykernel==6.5.1
 ipython==7.30.0
 ipython-genutils==0.2.0
+itemadapter==0.4.0
+itemloaders==1.0.4
 jedi==0.18.1
 Jinja2==3.0.3
+jmespath==0.10.0
 json5==0.9.6
 jsonschema==4.2.1
 jupyter-client==7.1.0
@@ -34,6 +50,7 @@ jupyter-server==1.12.1
 jupyterlab==3.2.4
 jupyterlab-pygments==0.1.2
 jupyterlab-server==2.8.2
+lxml==4.6.4
 MarkupSafe==2.0.1
 matplotlib-inline==0.1.3
 mistune==0.8.4
@@ -48,14 +65,22 @@ numpy==1.21.4
 packaging==21.3
 pandas==1.3.4
 pandocfilters==1.5.0
+parsel==1.6.0
 parso==0.8.2
 pexpect==4.8.0
 pickleshare==0.7.5
+plotly==5.4.0
+priority==1.3.0
 prometheus-client==0.12.0
 prompt-toolkit==3.0.23
+Protego==0.1.16
 ptyprocess==0.7.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
 pycparser==2.21
+PyDispatcher==2.0.5
 Pygments==2.10.0
+pyOpenSSL==21.0.0
 pyparsing==3.0.6
 pyproj==3.3.0
 pyrsistent==0.18.0
@@ -63,18 +88,29 @@ python-dateutil==2.8.2
 python-dotenv==0.19.2
 pytz==2021.3
 pyzmq==22.3.0
+queuelib==1.6.2
 requests==2.26.0
+s3transfer==0.5.0
+Scrapy==2.5.1
 Send2Trash==1.8.0
+service-identity==21.1.0
 Shapely==1.8.0
 six==1.16.0
 sniffio==1.2.0
+soupsieve==2.3.1
+SQLAlchemy==1.4.27
+tenacity==8.0.1
 terminado==0.12.1
 testpath==0.5.0
 tornado==6.1
 traitlets==5.1.1
+Twisted==21.7.0
+typing-extensions==4.0.0
 urllib3==1.26.7
 uuid==1.30
+w3lib==1.22.0
 wcwidth==0.2.5
 webencodings==0.5.1
 websocket-client==1.2.1
 zipp==3.6.0
+zope.interface==5.4.0
