--- a/requirements.txt
+++ b/requirements.txt
@@ -50,6 +50,7 @@ jupyter-server==1.12.1
 jupyterlab==3.2.4
 jupyterlab-pygments==0.1.2
 jupyterlab-server==2.8.2
+kaleido==0.2.1
 lxml==4.6.4
 MarkupSafe==2.0.1
 matplotlib-inline==0.1.3
@@ -74,6 +75,7 @@ priority==1.3.0
 prometheus-client==0.12.0
 prompt-toolkit==3.0.23
 Protego==0.1.16
+psycopg2-binary==2.9.2
 ptyprocess==0.7.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
@@ -105,7 +107,7 @@ testpath==0.5.0
 tornado==6.1
 traitlets==5.1.1
 Twisted==21.7.0
-typing-extensions==4.0.0
+typing_extensions==4.0.0
 urllib3==1.26.7
 uuid==1.30
 w3lib==1.22.0
